--- a/resume.html
+++ b/resume.html
@@ -57,7 +57,7 @@
 <table>
 	<tbody><tr><th width="300px" style="text-align: left; background-color: skyblue;">
 <div id="partA">
-	<img src="./RESUME2table_files/profile2 low.jpg" width="250px" height="250px" border="10px">
+	<img src="https://hyperbrain143.files.wordpress.com/2022/06/62cdee3015e27af99a5c0e283c32d220-edited-2.jpg" width="250px" height="250px" border="10px">
 	
 <div id="part1">
 	<h1>MIDATHA <br>VICKY</h1>
